--- a/ManagementSystem/ManagementSystem.csproj
+++ b/ManagementSystem/ManagementSystem.csproj
@@ -183,6 +183,10 @@
     <Compile Include="Migrations\202002171457004_Initial_Migration.designer.cs">
       <DependentUpon>202002171457004_Initial_Migration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002181026338_CreateContactAndCountyTables.cs" />
+    <Compile Include="Migrations\202002181026338_CreateContactAndCountyTables.designer.cs">
+      <DependentUpon>202002181026338_CreateContactAndCountyTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Contact.cs" />
@@ -370,6 +374,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202002171457004_Initial_Migration.resx">
       <DependentUpon>202002171457004_Initial_Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002181026338_CreateContactAndCountyTables.resx">
+      <DependentUpon>202002181026338_CreateContactAndCountyTables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
