--- a/ManagementSystem/ManagementSystem.csproj
+++ b/ManagementSystem/ManagementSystem.csproj
@@ -371,6 +371,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\DataTables\" />
+    <Folder Include="Scripts\DataTables\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
